change of email

--- a/Why_GuidedGateway.html
+++ b/Why_GuidedGateway.html
@@ -516,7 +516,7 @@
                     <li><i class="icon-map-marker"></i> <strong>Address:</strong> Kalighat , Kolkata , West Bengal
                     </li>
                     <li><i class="icon-phone"></i> <strong>Phone:</strong> +91 9830032920</li>
-                    <li><i class="icon-envelope"></i> <strong>Email:</strong> <a href="mailto:touchus@xmapledatalab.com">touchus@xmapledatalab.com</a>
+                    <li><i class="icon-envelope"></i> <strong>Email:</strong> <a href="mailto:support@guidedgateway.com">support@guidedgateway.com</a>
                     </li>
                 </ul>
 
