--- a/privacy.html
+++ b/privacy.html
@@ -53,7 +53,7 @@
 	id="wrapper"> <!-- START header --> <header> <!-- START #top-header
 	--> <div id="top-header"> <div class="container"> <div class="row
 	top-row"> <div class="col-md-6"> <div class="left-part alignleft">
-	<span class="contact-email small">support@xmapledatalab.com</span>
+	<span class="contact-email small">support@guidedgateway.com</span>
 	<span class="contact-phone small">+1 510 938 2562</span> <ul
 	class="social-media header-social"> <li><a class="sm-facebook"
 	href="#"><span>Facebook</span></a></li> <li><a class="sm-flickr"
@@ -207,7 +207,7 @@ The Privacy Policy sets forth our policies regarding the collection, use and pro
 <p>GuidedGateway.com site contains links to other web sites. Please note that when you click on one of these links, you are entering another web site for which Guided Gateway has no responsibility. We encourage you to read the privacy statements of all such sites as their policies may be materially different from this Privacy Policy. Of course, you are solely responsible for maintaining the secrecy of your passwords, and your GuidedGateway.com site membership account information. Please be very careful, responsible, and alert with this information, especially whenever you&#8217;re online.</p>
 <p>In addition to the circumstances described above, Guided Gateway may disclose the GuidedGateway.com site member information if required to do so by law, court order, as requested by other government or law enforcement authority, or in the good faith belief that disclosure is otherwise necessary or advisable including, without limitation, to protect the rights or properties of Guided Gateway or any or all of its affiliates, associates, employees, directors or officers or when we have reason to believe that disclosing the information is necessary to identify, contact or bring legal action against someone who may be causing interference with our rights or properties, whether intentionally or otherwise, or when anyone else could be harmed by such activities. In addition, if Guided Gateway or substantially all of its assets are acquired, our customer information will most likely also be transferred in connection with such acquisition<br />
 .</p>
-<p>This policy is effective as of September 1, 2015. Any material changes in the way Guided Gateway uses personal information will be described in future versions of this Privacy Statement. Of course, you may always submit concerns regarding our Privacy Statement or our privacy practices via email to touchus@xmapledatalab.com. Please reference the privacy policy in your subject line. Guided Gateway will attempt to respond to all reasonable concerns or inquiries within seven working days of receipt.</p>
+<p>This policy is effective as of September 1, 2015. Any material changes in the way Guided Gateway uses personal information will be described in future versions of this Privacy Statement. Of course, you may always submit concerns regarding our Privacy Statement or our privacy practices via email to support@guidedgateway.com. Please reference the privacy policy in your subject line. Guided Gateway will attempt to respond to all reasonable concerns or inquiries within seven working days of receipt.</p>
 <p>We look forward to having the opportunity to serve you!!</p>
 			</div><!-- .entry-content -->
 					
