--- a/guide-detail-sidebar.html
+++ b/guide-detail-sidebar.html
@@ -47,7 +47,7 @@
 						<div class="row top-row">
 							<div class="col-md-6">
 								<div class="left-part alignleft">
-									<span class="contact-email small">touchus@xmapledatalab.com</span>
+									<span class="contact-email small">touchus@guidedgateway.com</span>
 									<span class="contact-phone small">+1 510 938 2562</span>
 									<ul class="social-media header-social">
 										<li><a class="sm-yahoo" href="#"><span>Yahoo</span></a></li>
