--- a/guides.html
+++ b/guides.html
@@ -49,7 +49,7 @@
 	id="wrapper"> <!-- START header --> <header> <!-- START #top-header
 	--> <div id="top-header"> <div class="container"> <div class="row
 	top-row"> <div class="col-md-6"> <div class="left-part alignleft">
-	<span class="contact-email small">support@xmapledatalab.com</span>
+	<span class="contact-email small">support@guidedgateway.com</span>
 	<span class="contact-phone small">+1 510 938 2562</span> <ul
 	class="social-media header-social"> <li><a class="sm-facebook"
 	href="#"><span>Facebook</span></a></li> <li><a class="sm-flickr"
@@ -421,11 +421,11 @@
 									</ul>
 								</div>
 								<div class="foot-box foot-box-md col-md-4">
-									<span class="contact-email"> touchus@xmapledatalab.com</span>
+									<span class="contact-email">support@guidedgateway.com</span>
 									<span class="contact-phone"> +1 125 496 0999</span>
 								</div>
 								<div class="foot-box col-md-4">
-									<span class="">&copy; 2013 xmapledatalab. All Rights Reserved.</span>
+									<span class="">&copy; 2013 Guided Gateway. All Rights Reserved.</span>
 								</div>
 							</div>
 						</div>
