--- a/howitworks_guide.html
+++ b/howitworks_guide.html
@@ -447,7 +447,7 @@
                     <li><i class="icon-map-marker"></i> <strong>Address:</strong> Kalighat , Kolkata , West Bengal
                     </li>
                     <li><i class="icon-phone"></i> <strong>Phone:</strong> +91 9830032920</li>
-                    <li><i class="icon-envelope"></i> <strong>Email:</strong> <a href="mailto:touchus@xmapledatalab.com">touchus@xmapledatalab.com</a>
+                    <li><i class="icon-envelope"></i> <strong>Email:</strong> <a href="mailto:support@guidedgateway.com">touchus@guidedgateway.com</a>
                     </li>
                 </ul>
             </div>
@@ -458,7 +458,7 @@
                     <li><i class="icon-map-marker"></i> <strong>Address:</strong> 34149 Finnigan Terrace, Fremont , CA , 94555
                     </li>
                     <li><i class="icon-phone"></i> <strong>Phone:</strong> +1 5109382562</li>
-                    <li><i class="icon-envelope"></i> <strong>Email:</strong> <a href="mailto:touchus@xmapledatalab.com">touchus@xmapledatalab.com</a>
+                    <li><i class="icon-envelope"></i> <strong>Email:</strong> <a href="mailto:support@guidedgateway.com">support@guidedgateway.com</a>
                     </li>
                 </ul>
 
