--- a/Why_GuidedGateway.html
+++ b/Why_GuidedGateway.html
@@ -59,9 +59,11 @@
                 <div class="col-md-11">
                     <h1 class="title" style="color: #444454">Guided <span>Gateway</span></h1>
 
-                    <p style="color: #444454">Guided Gateway is a marketplace for guides. </br/>We connect national and international toursists with <bold>GUIDES</bold>.</p>
+                    <p style="color: #444454">Guided Gateway is #1 online marketplace for guides. </br/>We connect national and international toursists with <bold>GUIDES</bold>.</p>
+        
+                    <h3 style="color: #248822">Be part of a thriving community to promote your unique tours to tourists across the world</h3>
 
-                    <p style="color: #444454"><a class="btn btn-success btn-lg" href="guide_registration_1.php">Sign Up <i class="icon icon-angle-right"></i></a></p>
+                    <p style="color: #444454"><a class="btn btn-success btn-lg" href="guide_registration_1.php">Join <i class="icon icon-angle-right"></i></a></p>
                 </div>
             </div>
         </div>
@@ -174,14 +176,14 @@
                             </div>
                             <div class="feature-box-info">
                                 <h4 class="shorter">Marketing</h4>
-                                <p class="tall">Our content writer will setup your profile based on your raw input.</p>
+                                <p class="tall">Our expert content strategists will setup your profile based on your raw input.</p>
                             </div>
                         </div>
                     </div>
                 </div>
 
             </div>
-            <div class="col-md-4 col-md-pull-8">
+            <!-- div class="col-md-4 col-md-pull-8">
                 <div class="list-group">
                     <a href="#" class="list-group-item active">
                         <h4 class="list-group-item-heading">List group item heading</h4>
@@ -208,7 +210,7 @@
                             tellus ac cursus commodo, tortor </p>
                     </a>
 
-                </div>
+                </div -->
 
 
             </div>
@@ -299,7 +301,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h3 class="text-center">We have 300 registered guides promoting 2000 tours to our 10000 daily visitors</h3>
+                <h3 class="text-center">You will be part of a thriving community of tour guides promoting their unique tours tourists across the world</h3>
             </div>
         </div>
     </div>
@@ -350,7 +352,7 @@
                                             <div class="item">
                                                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 item">
                                                     <div class="item-inner"><a style="cursor: pointer;"><img
-                                                            src="images/https://storage.googleapis.com/guidedgateway_media/guide_1.jpg" alt="Upportdash"></a></div>
+                                                            src="https://storage.googleapis.com/guidedgateway_media/guide_1.jpg" alt="Upportdash"></a></div>
                                                 </div>
                                                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 item">
                                                     <div class="item-inner"><a style="cursor: pointer;"><img
@@ -395,7 +397,7 @@
                                                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                                         <div class="testimonial item">
                                                             <p>
-                                                                Guided Gateway has increased my income 3 folds. I am now getting tourists from new places who never could have reached out to me without the help from Guided Gateway.Now I don't have to numerous phone calls to tell my tour details or price. Tourirts are more happy with a complete package and are referring their friends and giving me good reviews.                                 </p>
+                                                                Guided Gateway will surely has the potential to increase my income quite a bit. Through their online presence, 24/7 marketing support , I can get tourists from new places.With their service, my incoming phone  to describe my tour details or price will surely reduce. I could also make tourists more happier by providing other services to my tourists                                 </p>
 
                                                             <div class="testimonials-arrow">
                                                             </div>
@@ -403,7 +405,7 @@
                                                                 <div class="testimonial-image "><img
                                                                         src="https://storage.googleapis.com/guidedgateway_media/guide_1.jpg" alt=""></div>
                                                                 <div class="testimonial-author-info">
-                                                                    <a style="cursor: pointer;">Rakesh Saha</a>,Jaupur, Rajasthan
+                                                                    <a style="cursor: pointer;">Rakesh Saha</a>,Rajasthan
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -413,15 +415,15 @@
                                                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                                         <div class="testimonial item">
                                                             <p>
-                                                                Guided Gateway is no brainer for me to join. Their online portal, tourist support , social marketing are the some of tools which I never had access to. That too no fees. They also take care of my booking, maintain my booking calendar and just-in-time sms alerts make sure that I can focus on my main purpose - making tourists happier.                                                    </p>
+                                                                Guided Gateway is no brainer for me to join. Their online portal, tourist support , social marketing will be some of tools which I never would have access to. That too without any setup or registrations fees. They will also take care of my booking, will maintain my booking calendar and will provide just-in-time sms alerts to make sure that I can focus on my main purpose - making tourists happier.                                                    </p>
 
                                                             <div class="testimonials-arrow">
                                                             </div>
                                                             <div class="author">
                                                                 <div class="testimonial-image "><img
-                                                                        src="https://storage.googleapis.com/guidedgateway_media/guide_2.jpg" alt=""></div>
+                                                                        src="https://storage.googleapis.com/guidedgateway_media/guide_3.jpg" alt=""></div>
                                                                 <div class="testimonial-author-info">
-                                                                    <a href="#">Sujay Kar</a>,Kolkata , West Bengal
+                                                                    <a href="#">Sujay Kar</a>, West Bengal
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -431,17 +433,17 @@
                                                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                                         <div class="testimonial item">
                                                             <p>
-                                                                Guided Gateway is no brainer for me to join. Their online portal, tourist support , social marketing are the some of tools which I never had access to. That too no fees. They also take care of my booking, maintain my booking calendar and just-in-time sms alerts make sure that I can focus on my main purpose - making tourists happier.
+                                                                Guided Gateway and their approach to guide tours can surely make traveling in India much richer experience for local or international tourists.
                                                             </p>
 
                                                             <div class="testimonials-arrow">
                                                             </div>
                                                             <div class="author">
                                                                 <div class="testimonial-image "><img
-                                                                        src="https://storage.googleapis.com/guidedgateway_media/guide_3.jpg" alt=""></div>
+                                                                        src="https://storage.googleapis.com/guidedgateway_media/guide_4.jpg" alt=""></div>
                                                                 <div class="testimonial-author-info">
                                                                     <a style="cursor: pointer;">Suraj Pradhan</a>
-                                                                    Konark, Orisa
+                                                                    Orisa
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -467,7 +469,7 @@
 
         <div class="row">
 
-            <div class="col-md-6">
+            <!-- div class="col-md-6">
 
                 <div class="alert alert-success hidden" id="contactSuccess">
                     <strong>Success!</strong> Your message has been sent to us.
@@ -502,7 +504,7 @@
 
                     <button class="btn btn-success btn-xlg" type="submit">Send Message</button>
                 </form>
-            </div>
+            </div -->
             <div class="col-md-offset-1 col-md-5">
                 <br/>
                 <h4 class="pull-top">Get in <strong>touch</strong></h4>
