--- a/common_header.html
+++ b/common_header.html
@@ -17,9 +17,9 @@
 	onblur="if (this.value == '') { this.value = 'Search...'; }" />
 	<input type="submit" name="submit" class="search-submit" value="" />
 	</fieldset> </form> <span class="top-link small"><a
-										href="http://guide.guidedgateway
-										.com" title="">Guide
-										Sign-in</a></span> <span class="top-link small"><a href="sign-in.html"
+										href="http://www.guidedgateway
+										.com/Why_GuidedGateway.html" title="">Guide
+										Sign-up</a></span> <span class="top-link small"><a href="sign-in.html"
 										title="">SIGN IN</a></span> </div>
 	</div> </div> </div> </div> <!-- END #top-header -->
 
