--- a/index_demo.html
+++ b/index_demo.html
@@ -78,8 +78,8 @@
 	onblur="if (this.value == '') { this.value = 'Search...'; }" />
 	<input type="submit" name="submit" class="search-submit" value="" />
 	</fieldset> </form> <span class="top-link small"><a
-										href="guide_login.php" title="">Guide
-										Sign-in</a></span> <span class="top-link small"><a href="#"
+										href="http://www.guidedgateway.com/Why_GuidedGateway.html" title="">Guide
+										Sign-up</a></span> <span class="top-link small"><a href="#"
 										title="">SIGN IN</a></span> </div>
 	</div> </div> </div> </div> <!-- END #top-header -->
 
