--- a/top-destinations-listview-sidebar.html
+++ b/top-destinations-listview-sidebar.html
@@ -71,7 +71,7 @@
 	</fieldset> </form> <span class="top-link small"><a
 										href="http://guide.guidedgateway
 										.com" title="">Guide
-										Sign-in</a></span> <span class="top-link small"><a href="sign-in.html"
+										Sign-up</a></span> <span class="top-link small"><a href="sign-in.html"
 										title="">SIGN IN</a></span> </div>
 	</div> </div> </div> </div> <!-- END #top-header -->
 
