--- a/guides.html
+++ b/guides.html
@@ -49,7 +49,7 @@
 	id="wrapper"> <!-- START header --> <header> <!-- START #top-header
 	--> <div id="top-header"> <div class="container"> <div class="row
 	top-row"> <div class="col-md-6"> <div class="left-part alignleft">
-	<span class="contact-email small">support@xmapledatalab.com</span>
+	<span class="contact-email small">support@guidedgateway.com</span>
 	<span class="contact-phone small">+1 510 938 2562</span> <ul
 	class="social-media header-social"> <li><a class="sm-facebook"
 	href="#"><span>Facebook</span></a></li> <li><a class="sm-flickr"
@@ -63,9 +63,8 @@
 	onblur="if (this.value == '') { this.value = 'Search...'; }" />
 	<input type="submit" name="submit" class="search-submit" value="" />
 	</fieldset> </form> <span class="top-link small"><a
-										href="http://guide.guidedgateway
-										.com" title="">Guide
-										Sign-in</a></span> <span class="top-link small"><a href="sign-in.html"
+										href="http://www.guidedgateway.com/Why_GuidedGateway.html" title="">Guide
+										Sign-up</a></span> <span class="top-link small"><a href="sign-in.html"
 										title="">SIGN IN</a></span> </div>
 	</div> </div> </div> </div> <!-- END #top-header -->
 
@@ -421,11 +420,11 @@
 									</ul>
 								</div>
 								<div class="foot-box foot-box-md col-md-4">
-									<span class="contact-email"> touchus@xmapledatalab.com</span>
+									<span class="contact-email">support@guidedgateway.com</span>
 									<span class="contact-phone"> +1 125 496 0999</span>
 								</div>
 								<div class="foot-box col-md-4">
-									<span class="">&copy; 2013 xmapledatalab. All Rights Reserved.</span>
+									<span class="">&copy; 2013 Guided Gateway. All Rights Reserved.</span>
 								</div>
 							</div>
 						</div>
