--- a/index_demo.html
+++ b/index_demo.html
@@ -64,7 +64,7 @@
 	id="wrapper"> <!-- START header --> <header> <!-- START #top-header
 	--> <div id="top-header"> <div class="container"> <div class="row
 	top-row"> <div class="col-md-6"> <div class="left-part alignleft">
-	<span class="contact-email small">touchus@xmapledatalab.com</span>
+	<span class="contact-email small">touchus@guidedgateway.com</span>
 	<span class="contact-phone small">+1 510 938 2562</span> <ul
 	class="social-media header-social"> <li><a class="sm-facebook"
 	href="#"><span>Facebook</span></a></li> <li><a class="sm-flickr"
@@ -78,8 +78,8 @@
 	onblur="if (this.value == '') { this.value = 'Search...'; }" />
 	<input type="submit" name="submit" class="search-submit" value="" />
 	</fieldset> </form> <span class="top-link small"><a
-										href="guide_login.php" title="">Guide
-										Sign-in</a></span> <span class="top-link small"><a href="#"
+										href="http://www.guidedgateway.com/Why_GuidedGateway.html" title="">Guide
+										Sign-up</a></span> <span class="top-link small"><a href="#"
 										title="">SIGN IN</a></span> </div>
 	</div> </div> </div> </div> <!-- END #top-header -->
 
@@ -88,7 +88,7 @@
 				class="col-md-3"> <a id="site-logo" href="#"> <img
 				src="img/logo.png" alt="Guided Gateway" /> </a> </div> <div
 				class="col-md-9"> <nav class="main-nav">
-				<span>MENU</span> <ul id="main-menu"> <li><a href="index.html"
+				<span>MENU</span> <ul id="main-menu"> <li><a href="#"
 				title="">HOME</a> <!-- ul> <li><a href="index.html"
 				title="">HOME PAGE 1</a></li> <li><a href="home.html"
 				title="">HOME PAGE 2</a></li> </ul --> </li> <li><a
