--- a/top-destinations-listview-sidebar.html
+++ b/top-destinations-listview-sidebar.html
@@ -55,7 +55,7 @@
 			<header>
 				<div id="top-header"> <div class="container"> <div class="row
 	top-row"> <div class="col-md-6"> <div class="left-part alignleft">
-	<span class="contact-email small">support@xmapledatalab.com</span>
+	<span class="contact-email small">touchus@guidedgateway.com</span>
 	<span class="contact-phone small">+1 510 938 2562</span> <ul
 	class="social-media header-social"> <li><a class="sm-facebook"
 	href="#"><span>Facebook</span></a></li> <li><a class="sm-flickr"
@@ -71,7 +71,7 @@
 	</fieldset> </form> <span class="top-link small"><a
 										href="http://guide.guidedgateway
 										.com" title="">Guide
-										Sign-in</a></span> <span class="top-link small"><a href="sign-in.html"
+										Sign-up</a></span> <span class="top-link small"><a href="sign-in.html"
 										title="">SIGN IN</a></span> </div>
 	</div> </div> </div> </div> <!-- END #top-header -->
 
