fix media upload

--- a/index.html
+++ b/index.html
@@ -186,10 +186,9 @@ span.stars span {
 					<!-- <div class="input-field	col-md-3">
 					<input type="text" placeholder="2. What to do?" /></div> -->
 					<div class="input-field col-md-4"> 
-					<label>3.Including</label>
-					<label><input class="input-cb"	type="checkbox" name="inc_hotel" value="1"	checked="checked" /> Hotel</label> 
-					<label><input class="input-cb" type="checkbox" name="inc_flight" value="1" checked="checked" /> Meals </label>
-					<label><input class="input-cb" type="checkbox"	name="inc_car" value="1" /> Transport</label> </div> 
+					<label><input class="input-cb"	type="checkbox" name="inc_hotel" value="1"	checked="checked" /> Places</label> 
+					<label><input class="input-cb" type="checkbox" name="inc_flight" value="1" checked="checked" /> Tours </label>
+					<label><input class="input-cb" type="checkbox"	name="inc_car" value="1" />Guides</label> </div> 
 					<div class="submit-btn col-md-2"> <input type="submit"	value="Search" /> </div> 
 					</div>
 					</form> <!-- END
