--- a/tests/Testcase1.html
+++ b/tests/Testcase1.html
@@ -15,12 +15,12 @@ rel="selenium.base"> <TITLE>readcsv</TITLE>
     <TD rowspan="1" colspan="3">readcsv</TD></TR></THEAD>
   <TBODY><tr>
 	<td>readCSV</td>
-	<td>file://C:\Users\Salman\Desktop\Guided gateway test cases/Registration1.csv</td>
+	<td>file:///Users/rsaha/work/code/xmaple/guidedgatewayprodsite/guidedgateway/tests/Registration1.csv</td>
 	<td></td>
 </tr>
 <tr>
 	<td>open</td>
-	<td>http://192.168.1.97:8080/guidedgateway/guide_registration_1.php</td>
+	<td>http://130.211.240.161/guide_registration_1.php</td>
 	<td></td>
 </tr>
 <tr>
@@ -569,3 +569,4 @@ rel="selenium.base"> <TITLE>readcsv</TITLE>
 	<td></td>
 </tr>
 </TBODY></TABLE></BODY></HTML>
+
