--- a/tests/Testcase1.html
+++ b/tests/Testcase1.html
@@ -26,7 +26,7 @@ rel="selenium.base"> <TITLE>readcsv</TITLE>
 <tr>
 	<td>storeCellValue</td>
 	<td>testvalue</td>
-	<td>4,1</td>
+	<td>2,1</td>
 </tr>
 <tr>
 	<td>echo</td>
@@ -41,7 +41,7 @@ rel="selenium.base"> <TITLE>readcsv</TITLE>
 <tr>
 	<td>storeCellValue</td>
 	<td>testvalue1</td>
-	<td>4,2</td>
+	<td>2,2</td>
 </tr>
 <tr>
 	<td>echo</td>
@@ -56,7 +56,7 @@ rel="selenium.base"> <TITLE>readcsv</TITLE>
 <tr>
 	<td>storeCellValue</td>
 	<td>testvalue2</td>
-	<td>4,3</td>
+	<td>2,3</td>
 </tr>
 <tr>
 	<td>echo</td>
@@ -71,7 +71,7 @@ rel="selenium.base"> <TITLE>readcsv</TITLE>
 <tr>
 	<td>storeCellValue</td>
 	<td>testvalue3</td>
-	<td>4,4</td>
+	<td>2,4</td>
 </tr>
 <tr>
 	<td>echo</td>
@@ -86,7 +86,7 @@ rel="selenium.base"> <TITLE>readcsv</TITLE>
 <tr>
 	<td>storeCellValue</td>
 	<td>testvalue4</td>
-	<td>4,5</td>
+	<td>2,5</td>
 </tr>
 <tr>
 	<td>echo</td>
@@ -101,7 +101,7 @@ rel="selenium.base"> <TITLE>readcsv</TITLE>
 <tr>
 	<td>storeCellValue</td>
 	<td>testvalue5</td>
-	<td>4,6</td>
+	<td>2,6</td>
 </tr>
 <tr>
 	<td>echo</td>
@@ -126,7 +126,7 @@ rel="selenium.base"> <TITLE>readcsv</TITLE>
 <tr>
 	<td>storeCellValue</td>
 	<td>testvalue6</td>
-	<td>4,7</td>
+	<td>2,7</td>
 </tr>
 <tr>
 	<td>echo</td>
@@ -141,7 +141,7 @@ rel="selenium.base"> <TITLE>readcsv</TITLE>
 <tr>
 	<td>storeCellValue</td>
 	<td>testvalue7</td>
-	<td>4,8</td>
+	<td>2,8</td>
 </tr>
 <tr>
 	<td>echo</td>
@@ -156,7 +156,7 @@ rel="selenium.base"> <TITLE>readcsv</TITLE>
 <tr>
 	<td>storeCellValue</td>
 	<td>testvalue8</td>
-	<td>4,9</td>
+	<td>2,9</td>
 </tr>
 <tr>
 	<td>echo</td>
@@ -171,7 +171,7 @@ rel="selenium.base"> <TITLE>readcsv</TITLE>
 <tr>
 	<td>storeCellValue</td>
 	<td>testvalue9</td>
-	<td>4,10</td>
+	<td>2,10</td>
 </tr>
 <tr>
 	<td>echo</td>
@@ -186,7 +186,7 @@ rel="selenium.base"> <TITLE>readcsv</TITLE>
 <tr>
 	<td>storeCellValue</td>
 	<td>testvalue10</td>
-	<td>4,11</td>
+	<td>2,11</td>
 </tr>
 <tr>
 	<td>echo</td>
@@ -201,7 +201,7 @@ rel="selenium.base"> <TITLE>readcsv</TITLE>
 <tr>
 	<td>storeCellValue</td>
 	<td>testvalue11</td>
-	<td>4,12</td>
+	<td>2,12</td>
 </tr>
 <tr>
 	<td>echo</td>
@@ -216,7 +216,7 @@ rel="selenium.base"> <TITLE>readcsv</TITLE>
 <tr>
 	<td>storeCellValue</td>
 	<td>testvalue12</td>
-	<td>4,13</td>
+	<td>2,13</td>
 </tr>
 <tr>
 	<td>echo</td>
@@ -231,7 +231,7 @@ rel="selenium.base"> <TITLE>readcsv</TITLE>
 <tr>
 	<td>storeCellValue</td>
 	<td>testvalue13</td>
-	<td>4,14</td>
+	<td>2,14</td>
 </tr>
 <tr>
 	<td>echo</td>
@@ -246,7 +246,7 @@ rel="selenium.base"> <TITLE>readcsv</TITLE>
 <tr>
 	<td>storeCellValue</td>
 	<td>testvalue14</td>
-	<td>4,15</td>
+	<td>2,15</td>
 </tr>
 <tr>
 	<td>echo</td>
@@ -261,7 +261,7 @@ rel="selenium.base"> <TITLE>readcsv</TITLE>
 <tr>
 	<td>storeCellValue</td>
 	<td>testvalue15</td>
-	<td>4,16</td>
+	<td>2,16</td>
 </tr>
 <tr>
 	<td>echo</td>
@@ -276,7 +276,7 @@ rel="selenium.base"> <TITLE>readcsv</TITLE>
 <tr>
 	<td>storeCellValue</td>
 	<td>testvalue16</td>
-	<td>4,17</td>
+	<td>2,17</td>
 </tr>
 <tr>
 	<td>echo</td>
@@ -291,7 +291,7 @@ rel="selenium.base"> <TITLE>readcsv</TITLE>
 <tr>
 	<td>storeCellValue</td>
 	<td>testvalue17</td>
-	<td>4,18</td>
+	<td>2,18</td>
 </tr>
 <tr>
 	<td>echo</td>
@@ -306,7 +306,7 @@ rel="selenium.base"> <TITLE>readcsv</TITLE>
 <tr>
 	<td>storeCellValue</td>
 	<td>testvalue18</td>
-	<td>4,19</td>
+	<td>2,19</td>
 </tr>
 <tr>
 	<td>echo</td>
@@ -331,7 +331,7 @@ rel="selenium.base"> <TITLE>readcsv</TITLE>
 <tr>
 	<td>storeCellValue</td>
 	<td>testvalue19</td>
-	<td>4,20</td>
+	<td>2,20</td>
 </tr>
 <tr>
 	<td>echo</td>
@@ -346,22 +346,22 @@ rel="selenium.base"> <TITLE>readcsv</TITLE>
 <tr>
 	<td>storeCellValue</td>
 	<td>testvalue20</td>
-	<td>4,21</td>
+	<td>2,21</td>
 </tr>
 <tr>
 	<td>echo</td>
-	<td>${testvalue20</td>
+	<td>${testvalue20}</td>
 	<td></td>
 </tr>
 <tr>
 	<td>type</td>
 	<td>name=GuideLinkedinProfile</td>
-	<td>${testvalue19}</td>
+	<td>${testvalue20}</td>
 </tr>
 <tr>
 	<td>storeCellValue</td>
 	<td>testvalue21</td>
-	<td>4,22</td>
+	<td>2,22</td>
 </tr>
 <tr>
 	<td>echo</td>
@@ -376,7 +376,7 @@ rel="selenium.base"> <TITLE>readcsv</TITLE>
 <tr>
 	<td>storeCellValue</td>
 	<td>testvalue22</td>
-	<td>4,23</td>
+	<td>2,23</td>
 </tr>
 <tr>
 	<td>echo</td>
@@ -391,7 +391,7 @@ rel="selenium.base"> <TITLE>readcsv</TITLE>
 <tr>
 	<td>storeCellValue</td>
 	<td>testvalue23</td>
-	<td>4,24</td>
+	<td>2,24</td>
 </tr>
 <tr>
 	<td>echo</td>
@@ -406,11 +406,11 @@ rel="selenium.base"> <TITLE>readcsv</TITLE>
 <tr>
 	<td>storeCellValue</td>
 	<td>testvalue24</td>
-	<td>4,25</td>
+	<td>2,25</td>
 </tr>
 <tr>
 	<td>echo</td>
-	<td>${testvalue23}</td>
+	<td>${testvalue24}</td>
 	<td></td>
 </tr>
 <tr>
@@ -426,7 +426,7 @@ rel="selenium.base"> <TITLE>readcsv</TITLE>
 <tr>
 	<td>storeCellValue</td>
 	<td>testvalue25</td>
-	<td>4,26</td>
+	<td>2,26</td>
 </tr>
 <tr>
 	<td>echo</td>
@@ -441,7 +441,7 @@ rel="selenium.base"> <TITLE>readcsv</TITLE>
 <tr>
 	<td>storeCellValue</td>
 	<td>testvalue26</td>
-	<td>4,27</td>
+	<td>2,27</td>
 </tr>
 <tr>
 	<td>echo</td>
@@ -456,7 +456,7 @@ rel="selenium.base"> <TITLE>readcsv</TITLE>
 <tr>
 	<td>storeCellValue</td>
 	<td>testvalue27</td>
-	<td>4,28</td>
+	<td>2,28</td>
 </tr>
 <tr>
 	<td>echo</td>
@@ -471,7 +471,7 @@ rel="selenium.base"> <TITLE>readcsv</TITLE>
 <tr>
 	<td>storeCellValue</td>
 	<td>testvalue28</td>
-	<td>4,29</td>
+	<td>2,29</td>
 </tr>
 <tr>
 	<td>echo</td>
@@ -486,7 +486,7 @@ rel="selenium.base"> <TITLE>readcsv</TITLE>
 <tr>
 	<td>storeCellValue</td>
 	<td>testvalue29</td>
-	<td>4,30</td>
+	<td>2,30</td>
 </tr>
 <tr>
 	<td>echo</td>
@@ -501,7 +501,7 @@ rel="selenium.base"> <TITLE>readcsv</TITLE>
 <tr>
 	<td>storeCellValue</td>
 	<td>testvalue30</td>
-	<td>4,31</td>
+	<td>2,31</td>
 </tr>
 <tr>
 	<td>echo</td>
@@ -516,7 +516,7 @@ rel="selenium.base"> <TITLE>readcsv</TITLE>
 <tr>
 	<td>storeCellValue</td>
 	<td>testvalue31</td>
-	<td>4,32</td>
+	<td>2,32</td>
 </tr>
 <tr>
 	<td>echo</td>
@@ -531,7 +531,7 @@ rel="selenium.base"> <TITLE>readcsv</TITLE>
 <tr>
 	<td>storeCellValue</td>
 	<td>testvalue32</td>
-	<td>4,33</td>
+	<td>2,33</td>
 </tr>
 <tr>
 	<td>echo</td>
@@ -546,7 +546,7 @@ rel="selenium.base"> <TITLE>readcsv</TITLE>
 <tr>
 	<td>storeCellValue</td>
 	<td>testvalue33</td>
-	<td>4,34</td>
+	<td>2,34</td>
 </tr>
 <tr>
 	<td>echo</td>
@@ -568,5 +568,14 @@ rel="selenium.base"> <TITLE>readcsv</TITLE>
 	<td>Guide Profile | Guided Gateway</td>
 	<td></td>
 </tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>css=li.pull-right &gt; a</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertTitle</td>
+	<td>Guide Sign In | Guided Gateway</td>
+	<td></td>
+</tr>
 </TBODY></TABLE></BODY></HTML>
-
