--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 		
 	<style type="text/css">
 	#searchDiv{
-	top: 130px;
+	top: 230px;
 	position: absolute;
 	left:20px;
 	z-index: 2;
@@ -133,7 +133,7 @@
 						<div class="top-fields" class="col-md-12">
 						<div class="row">								
 						<div class="col-md-8 col-md-offset-1">
-						<input type="text" class="form-control" style="background-color:white;" placeholder="Where to go?" />
+						<input type="text" class="form-control" style="background-color:white;" placeholder="What's in your mind" />
 						</div> 
 						<div class="col-md-2" >
 						<input type="submit" class="form-control" style="background-color:#ff845e;" class="btn btn-primary" value="Search" /> 
@@ -141,10 +141,10 @@
 						</div>
 						<div class="row">
 						<div class="col-md-7 col-md-offset-1"> <br>
-						<label >Search via</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+						<label >Search only</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 						<label><input class="input-cb"	type="checkbox" name="inc_Tour" value="1"	checked="checked" /> Tours</label>&nbsp;&nbsp;&nbsp;&nbsp;
 						<label><input class="input-cb" type="checkbox" name="inc_Guide" value="1" checked="checked" /> Guides </label>&nbsp;&nbsp;&nbsp;&nbsp;
-						<label><input class="input-cb" type="checkbox"	name="inc_Destination" value="1" checked="checked"/> Destinations</label>&nbsp;&nbsp; 
+						<label><input class="input-cb" type="checkbox"	name="inc_Destination" value="1" checked="checked"/> Places</label>&nbsp;&nbsp; 
 						</div> 
 						</div>
 						</div>
@@ -177,7 +177,7 @@
                   
 					<!-- END Search Container -->
 
-				<h2 class="ft-heading text-upper">Popular Tours</h2>
+				<!-- h2 class="ft-heading text-upper">Popular Tours</h2 -->
 
 					<div class="carousel"> 
 					  <ul class="slides">
