--- a/guide_login.html
+++ b/guide_login.html
@@ -187,8 +187,8 @@
 							</ul> </div> <div class="foot-box
 							foot-box-md col-md-4"> <span
 							class="contact-email">
-							touchus@guidedgateway.com</span> <span
-							class="contact-phone"> +1 510 938 2562</span> </div> <div class="foot-box
+							support@guidedgateway.com</span> <span
+							class="contact-phone"> +91 9830032920</span> </div> <div class="foot-box
 							col-md-4"> <span class="">&copy; 2015							GuideGateway. All Rights Reserved.</span>
 							</div> </div> </div> </div> </div> <!-- END
 							#ex-footer --> </footer> <!-- END footer -->
