suppoet email change

--- a/howitworks_guide.html
+++ b/howitworks_guide.html
@@ -98,8 +98,8 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="http://www.guidedgateway.com">Home</a></li>
-                <li><a href="http://www.guidedgateway.com/guide_login.php">Guide Home</a></li>
-                <li><a href="http://www.guidedgateway.com/guide_registration_1.php">Guide Sign Up</a></li>
+                <li><a href="guide_login.php">Guide Home</a></li>
+                <li><a href="guide_registration_1.php">Guide Sign Up</a></li>
             </ul>
 
         </div>
