--- a/termsofuse.html
+++ b/termsofuse.html
@@ -67,7 +67,7 @@
 	onblur="if (this.value == '') { this.value = 'Search...'; }" />
 	<input type="submit" name="submit" class="search-submit" value="" />
 	</fieldset> </form> <span class="top-link small"><a
-										href="http://www.guidedgateway.com/Why_GuidedGateway.html" title="">Guide
+										href="Why_GuidedGateway.html" title="">Guide
 										Sign-up</a></span> <span class="top-link small"><a href="sign-in.html"
 										title="">SIGN IN</a></span> </div>
 	</div> </div> </div> </div> <!-- END #top-header -->
