logo directory change

--- a/gallery-slideshow.html
+++ b/gallery-slideshow.html
@@ -86,7 +86,7 @@
 						<div class="row">
 							<div class="col-md-3">
 								<a id="site-logo" href="#">
-									<img src="img/logo.png" alt="Travel Hub" />
+									<img src="images/logo.png" alt="Travel Hub" />
 								</a>
 							</div>
 							<div class="col-md-9">
