--- a/Why_GuidedGateway.html
+++ b/Why_GuidedGateway.html
@@ -33,7 +33,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#"><img src="img/logo.png" alt="GuideGateway" height="17px" /> </a>
+            <a class="navbar-brand" href="#"><img src="images/logo.png" alt="GuideGateway" height="17px" /> </a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
@@ -546,7 +546,7 @@
             <div class="row">
                 <div class="col-md-2">
                     <a class="logo" href="index.html">
-                        <img src="img/logo.png" alt="Guided Gateway" height="30px">
+                        <img src="images/logo.png" alt="Guided Gateway" height="30px">
                     </a>
                 </div>
                 <div class="col-md-5">
