--- a/guide_login.html
+++ b/guide_login.html
@@ -98,7 +98,7 @@
 						<div class="row"> 
 						<div class="col-md-3">
 						<a id="site-logo" href="#"> 
-						<img src="img/logo.png" alt="Guided Gateway" />
+						<img src="images/logo.png" alt="Guided Gateway" />
 						</a> 
 						</div>
 						<div class="col-md-9"> 
@@ -187,8 +187,8 @@
 							</ul> </div> <div class="foot-box
 							foot-box-md col-md-4"> <span
 							class="contact-email">
-							touchus@guidedgateway.com</span> <span
-							class="contact-phone"> +1 510 938 2562</span> </div> <div class="foot-box
+							support@guidedgateway.com</span> <span
+							class="contact-phone"> +91 9830032920</span> </div> <div class="foot-box
 							col-md-4"> <span class="">&copy; 2015							GuideGateway. All Rights Reserved.</span>
 							</div> </div> </div> </div> </div> <!-- END
 							#ex-footer --> </footer> <!-- END footer -->
