--- a/howitworks_guide.html
+++ b/howitworks_guide.html
@@ -93,13 +93,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#"><img src="img/logo.png" alt="GuideGateway" height="17px" /> </a>
+            <a class="navbar-brand" href="#"><img src="images/logo.png" alt="GuideGateway" height="17px" /> </a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="http://www.guidedgateway.com">Home</a></li>
-                <li><a href="http://www.guidedgateway.com/guide_login.php">Guide Home</a></li>
-                <li><a href="http://www.guidedgateway.com/guide_registration_1.php">Guide Sign Up</a></li>
+                <li><a href="guide_login.php">Guide Home</a></li>
+                <li><a href="guide_registration_1.php">Guide Sign Up</a></li>
             </ul>
 
         </div>
@@ -447,7 +447,7 @@
                     <li><i class="icon-map-marker"></i> <strong>Address:</strong> Kalighat , Kolkata , West Bengal
                     </li>
                     <li><i class="icon-phone"></i> <strong>Phone:</strong> +91 9830032920</li>
-                    <li><i class="icon-envelope"></i> <strong>Email:</strong> <a href="mailto:support@guidedgateway.com">touchus@guidedgateway.com</a>
+                    <li><i class="icon-envelope"></i> <strong>Email:</strong> <a href="mailto:support@guidedgateway.com">support@guidedgateway.com</a>
                     </li>
                 </ul>
             </div>
@@ -457,7 +457,7 @@
                 <ul class="unstyled">
                     <li><i class="icon-map-marker"></i> <strong>Address:</strong> 34149 Finnigan Terrace, Fremont , CA , 94555
                     </li>
-                    <li><i class="icon-phone"></i> <strong>Phone:</strong> +1 5109382562</li>
+                    <li><i class="icon-phone"></i> <strong>Phone:</strong> +91 9830032920</li>
                     <li><i class="icon-envelope"></i> <strong>Email:</strong> <a href="mailto:support@guidedgateway.com">support@guidedgateway.com</a>
                     </li>
                 </ul>
@@ -486,7 +486,7 @@
             <div class="row">
                 <div class="col-md-2">
                     <a class="logo" href="index.html">
-                        <img src="img/logo.png" alt="Guided Gateway" height="30px">
+                        <img src="images/logo.png" alt="Guided Gateway" height="30px">
                     </a>
                 </div>
                 <div class="col-md-5">
