--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ ul.rating {
 	<header> <!-- START #top-header
 	--> <div id="top-header"> <div class="container"> <div class="row
 	top-row"> <div class="col-md-6"> <div class="left-part alignleft">
-	<span class="contact-email small">touchus@xmapledatalab.com</span>
+	<span class="contact-email small">touchus@guidedgateway.com</span>
 	<span class="contact-phone small">+1 510 938 2562</span> <ul
 	class="social-media header-social"> <li><a class="sm-facebook"
 	href="#"><span>Facebook</span></a></li> <li><a class="sm-flickr"
@@ -229,7 +229,7 @@ ul.rating {
 								  <span style="color:black;" class="fa">{{x.Title}}</span>
 							   </div> 
 							   
-								<div class="ft-foot"> <h4 class="ft-title text-upper" style="color:#686868">{{x.Guide}}, RJ</h4> 
+								<div class="ft-foot"> <h4 class="ft-title text-upper" style="color:#686868">{{x.Guide}}</h4> 
 								<span class="ft-offer text-upper">Starting&nbsp&nbsp{{x.Price}}</span> 
 								</div>
 								<div class="ft-foot-ex" > 
