--- a/guide_login.html
+++ b/guide_login.html
@@ -109,7 +109,7 @@
 						<a href="index.html" title="">HOME</a>
 						</li> 
 						<li>
-						<a href="guides.html" title="">Guides</a>
+						<a href="top-guides-listview.html" title="">Guides</a>
 						</li>
 						<li><a href="top-destinations-listview-sidebar.html" title="">Destinations</a>
 						</li>
