--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ ul.rating {
 				class="col-md-9"> <nav class="main-nav">
 				<span>MENU</span> <ul id="main-menu"> <li><a href="index.html"
 				title="">HOME</a></li> <li><a
-				href="guides.html" title="">Guides</a></li> <li><a
+				href="top-guides-listview.html" title="">Guides</a></li> <li><a
 				href="top-destinations-listview-sidebar.html" title="">Destinations</a> </li>
                 <li><a
 				href="#" title="">Themed Tours</a> </li>
@@ -254,7 +254,7 @@ ul.rating {
 				<div class="row"  ng-controller="guideCtrl">
 				
 				   <div class="col-md-3" ng-repeat="x in allguides"> 
-				   <a href="top-destinations-listview-sidebar.html">
+				   <a href="top-guides-listview.html">
 				      <div	class="ft-item"> 
 						  <span class="ft-image">
 							 <img src="{{x.Photo}}" alt="featured Scroller" /> 
@@ -263,7 +263,7 @@ ul.rating {
 								<div class="ft-data">
 							  <span style="color:black;" class="fa fa-odnoklassniki text-upper">&nbsp;&nbsp;{{x.Gender}}</span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 							  <span style="color:black;" class="fa fa-book text-upper" >&nbsp;&nbsp;{{x.Speciality}}</span>&nbsp;&nbsp;&nbsp;&nbsp;
-							  <span style="color:black;" class="fa fa-plane text-upper" >&nbsp;&nbsp;{{x.Transport}}</span>
+							  <span style="color:black;" class="fa fa-plane text-upper" >&nbsp;&nbsp;{{x.LanguageKnown}}</span>
 								</div> 
 					
 							<div class="ft-foot">
