--- a/index_old.html
+++ b/index_old.html
@@ -134,7 +134,7 @@ span.stars span {
 				title="">HOME</a> <!-- ul> <li><a href="index.html"
 				title="">HOME PAGE 1</a></li> <li><a href="home.html"
 				title="">HOME PAGE 2</a></li> </ul --> </li> <li><a
-				href="guides.html" title="">Guides</a> 
+				href="top-guides-listview.html" title="">Guides</a> 
 				
 				
 				<!-- ul> <li><a
