--- a/top-guides-listview.html
+++ b/top-guides-listview.html
@@ -77,7 +77,7 @@
 				title="">HOME</a> <!-- ul> <li><a href="index.html"
 				title="">HOME PAGE 1</a></li> <li><a href="home.html"
 				title="">HOME PAGE 2</a></li> </ul --> </li> <li><a
-				href="guides.html" title="">Guides</a> <!-- ul> <li><a
+				href="top-guides-listview.html" title="">Guides</a> <!-- ul> <li><a
 				href="deals.html" title="">DEALS PAGE</a></li> <li><a
 				href="deals-sidebar.html" title="">DEALS PAGE WITH
 				SIDEBAR</a></li> <li><a href="deals-detail.html"
@@ -157,7 +157,7 @@
 					<div class="container">
 						<div class="row">
 							<section class="col-sm-6">
-								<h1 class="text-upper">Our Guides</h1>
+								<h1 class="text-upper">Your Guides</h1>
 							</section>
 							
 							<!-- breadcrumbs -->
@@ -181,20 +181,20 @@
 						<div class="col-md-3">
 							<div class="ft-item">
 								<span class="ft-image">
-									<img alt="featured Scroller" src="http://placehold.it/270x137" draggable="false">
+									<img alt="featured Scroller" src="{{x.Photo}}" draggable="false">
 								</span>
 								<div class="ft-data">
-									<a href="#" class="ft-hotel text-upper">Lodging</a>
-									<a href="#" class="ft-plane text-upper">History</a>
-									<a href="#" class="ft-tea text-upper">Custom</a>
+									<a href="#" class="ft-hotel text-upper">Male</a>
+									<a href="#" class="ft-plane text-upper">Art</a>
+									<a href="#" class="ft-tea text-upper">German</a>
 								</div>
 								<div class="ft-foot">
-									<h4 class="ft-title text-upper"><a href="#">Kolkata, WB</a></h4>
-									<span class="ft-offer text-upper">Starting From INR 2500</span>
+									<h4 class="ft-title text-upper"><a href="#">Sujay Kar  All Over India</a></h4>
 								</div>
 								<div class="ft-foot-ex">
-									<span class="ft-date text-upper alignleft">**** 4020 reviews</span>
-									<span class="ft-temp alignright">Female</span>
+									<span class="fa fa-shield text-upper alignleft">&nbsp;&nbsp;{{x.Tours.Count}} Tours&nbsp;&nbsp;&nbsp;&nbsp;</span>&nbsp;&nbsp;&nbsp;
+								<span star-rating rating-value="x.Review.Star" class="aligncenter"></span>
+								<span class="alignright fa fa-eye">{{x.Review.Count}} reviews</span>
 								</div>
 							</div>
 						</div>
